ajuste de index

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
 	<title>REAL AMISTAD</title>
 	<meta charset="UTF-8">
-	<link rel="shortcut icon" href="../IMG/ESCUDO-REAL-AMISTAD.png">	
-	<link rel="stylesheet" href="../estilos/R_A_Principal.css">
+	<link rel="shortcut icon" href="IMG/ESCUDO-REAL-AMISTAD.png">	
+	<link rel="stylesheet" href="estilos/R_A_Principal.css">
 </head>
 		<!-- aca empieza el cuerpo de la pagina a mostrar-->
 <body>
 
 	<div id="header" class="form-horizontal">
 	
-		<img src="../IMG/ESCUDO-REAL-AMISTAD.png" align="left" width="150px">
-		<img src="../IMG/ESCUDO-REAL-AMISTAD.png" align="right" width="150px">
+		<img src="IMG/ESCUDO-REAL-AMISTAD.png" align="left" width="150px">
+		<img src="IMG/ESCUDO-REAL-AMISTAD.png" align="right" width="150px">
 	
 	<H1 align="center"> CLUB REAL AMISTAD </H1>
 	<H4 align="center"> "¡¡¡MAS QUE UN EQUIPO UNA FAMILIA!!!" </H4>
@@ -54,9 +54,7 @@
 <div id="footer">
 	
 		
-		<img src="../IMG/ESCUDO-REAL-AMISTAD.png" align="left" width="150px">
-		
-		<img src="../IMG/ESCUDO-REAL-AMISTAD.png" align="right" width="150px">
+		<img src="IMG/ESCUDO-REAL-AMISTAD.png" align="right" width="150px">
 		<center><div id="interfooter1"> </div></center>
 		<center><div id="interfooter" ><MARQUEE><strong>® COPY RIGHT MORENO SOLUCIONES S.A ®</strong></MARQUEE></div></center>
 	
